# djangocms-alias

./: .editorconfig  .eslintrc.js  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.rst  addon.json  dev_requirements.txt  gulpfile.js  package-lock.json  package.json  plan.md  pyproject.toml  setup.cfg  setup.py  test_settings.py  tox.ini  webpack.config.js
.circleci/: Dockerfile  config.yml
.github/workflows/: codeql.yml  lint.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  test.yml
.tx/: config  transifex.yaml
djangocms_alias/: __init__.py  admin.py  apps.py  cms_config.py  cms_menus.py  cms_plugins.py  cms_toolbars.py  cms_wizards.py  compat.py  constants.py  filters.py  forms.py  helpers.py  internal_search.py  models.py  rendering.py  settings.py  urls.py  utils.py  views.py
djangocms_alias/migrations/: 0001_initial.py  0002_auto_20180412_1305.py  0002_auto_20180802_1636.py  0002_auto_20200327_0953.py  0002_auto_20200723_1424.py  0003_alter_alias_id_alter_aliascontent_id_and_more.py  0003_alter_aliascontent_language.py  0003_alter_aliasplugin_cmsplugin_ptr.py  0003_auto_20180413_1114.py  0003_auto_20230725_1547.py  0004_alter_aliascontent_language.py  0004_auto_20180419_0915.py  0005_dynamic_slot_names.py  0006_alter_alias_id_alter_aliascontent_id_and_more.py  0007_alter_category_options_alter_aliasplugin_alias.py  0008_alter_categorytranslation_unique_together_and_more.py
djangocms_alias/templates/djangocms_alias/: add_alias.html  alias.html  alias_confirm_delete.html  alias_content.html  alias_content_preview.html  alias_detail.html  base.html  (+11 more)
djangocms_alias/templatetags/: djangocms_alias_tags.py
tests/: base.py  requirements-cms40.txt  requirements.txt  settings.py  test_admin.py  test_admin_filters.py  test_alias.py  test_cache.py  test_cms_config.py  test_cms_plugins.py  test_create_alias_plugin.py  test_draft_live.py  test_helpers.py  test_menu.py  test_migrations.py  test_models.py  test_permissions.py  test_plugin_menu.py  test_rendering.py  test_templatetags.py  test_toolbar.py  test_utils.py  test_views.py  test_wizards.py  urls.py
tests/requirements/: compile.py  django_22.txt  django_32.txt  django_40.txt  django_41.txt  django_42.txt  djmain-py311-default.txt  py310-dj32-cms41-default.txt  py310-dj32-cms41-versioning.txt  py310-dj32-sqlite-default.txt  py310-dj40-cms41-default.txt  py310-dj40-cms41-versioning.txt  py310-dj41-cms41-default.txt  py310-dj41-cms41-versioning.txt  py310-dj42-cms41-default.txt  py310-dj42-cms41-versioning.txt  py310-dj50-cms41-default.txt  py310-dj50-cms41-versioning.txt  py310-dj51-cms41-default.txt  py310-dj51-cms41-versioning.txt  py311-dj40-cms41-default.txt  py311-dj40-cms41-versioning.txt  py311-dj41-cms41-default.txt  py311-dj41-cms41-versioning.txt  py311-dj41-versioning.txt  py311-dj42-cms41-default.txt  py311-dj42-cms41-versioning.txt  py311-dj50-cms41-default.txt  py311-dj50-cms41-versioning.txt  py311-dj51-cms41-versioning.txt  py311-dj52-cms41-default.txt  py311-dj52-cms41-versioning.txt  py311-dj52-cms50-default.txt  py311-dj52-cms50-versioning.txt  py311-djmain-cms41-default.txt  py311-djmain-cms41-versioning.txt  py311-djmain-cms4dev-default.txt  py311-djmain-cms4dev-versioning.txt  py312-dj42-cms41-default.txt  py312-dj42-cms41-versioning.txt  (+42 more)
tests/templates/: static_alias.html
(+49 files in other folders)
